2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use strlen.S and strnlen.S
	for x32.

2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use strrchr.S for x32.

2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use strchr.S for x32.

2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use memcmp_wrapper.S for
	x32.

2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* .gdbinit: Removed.

2012-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use memmove_wrapper.S for
	x32.

2012-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* test/malloc1.c (ALIGN): New.
	(test): Use it.

2012-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use unistd/fstatfs.c and
	unistd/statfs.c for x86.

2012-03-21  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Use bzero.S and memset.S
	for x32.

2012-03-02  H.J. Lu  <hongjiu.lu@intel.com>

	* test/malloc1.c: New.

	* Makefile: Build and run test/malloc1.c.

2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* test/pthread1.c: New.

	* Makefile: Build and run test/pthread1.c.

2012-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Remove unistd/sigsuspend.c
	and replace arch-$(ARCH)/bionic/__sigsuspend.c with
	arch-$(ARCH)/bionic/sigsuspend.c for x32.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libc_common_src_files): Add sigsetjmp.S.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (INCLUDES): Use i387 for x86 and amd64 for x32.
	(libc_common_src_files): Remove unistd/lseek64.c and unistd/mmap.c.
	Support x32.
	(libm_common_src_files): Support x32.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>

	* test/hello.c: Include <time.h>, <sys/stat.h> and <sys/statfs.h>.
	(hello): Print out sizes of time_t, off_t, struct stat and
	struct statfs.

2011-12-14  H.J. Lu  <hongjiu.lu@intel.com>
